fix(select-dropdown): shift the dropdown to left for small screen

--- a/src/app/widgets/select-dropdown/select-dropdown.component.less
+++ b/src/app/widgets/select-dropdown/select-dropdown.component.less
@@ -84,3 +84,11 @@
     }
   }
 }
+
+@media(max-width: 1330px) {
+  .select-dropdown-container {
+    .select-dropdown {
+      left: -80px;
+    }
+  }
+}
